Add content to index.html

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
   <meta charset="utf-8">
   <title>Venus</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
-  <section class="section">
+  <section class="section pad-t pad-b">
     <div>
 
-      <figure class="photo">
-        <img class="img-flex" src="images/venus.jpg" alt="">
-        <figcaption>A real-colour image of Venus.</figcaption>
+      <figure class="photo island-1-2">
+        <img class="img-flex " src="images/venus.jpg" alt="">
+        <figcaption class="text-center">A real-colour image of Venus.</figcaption>
       </figure>
 
       <div class="info">
