--- a/index.html
+++ b/index.html
@@ -9,44 +9,44 @@
 </head>
 <body>
 
-  <section class="section pad-t pad-b">
-    <div>
+  <section class="section pad-t-2 pad-b-2">
+    <div class="wrapper gutter-1-4">
 
-      <figure class="photo island-1-2">
+      <figure class="photo gutter-1-4">
         <img class="img-flex " src="images/venus.jpg" alt="">
-        <figcaption class="text-center italic">A real-colour image of Venus.</figcaption>
+        <figcaption class="milli text-center italic">A real-colour image of Venus.</figcaption>
       </figure>
 
-      <div class="info">
-        <h1 class="push-none">Venus</h1>
+      <div class="info gutter-1-4">
+        <h1 class="push-none peta">Venus</h1>
         <p class="italic mega">Venus, the second planet in the Solar System.</p>
         <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
         <div class="details">
-          <h2 class="giga">Physical characteristics</h2>
-          <dl>
+          <h2 class="mega">Physical characteristics</h2>
+          <dl class="push-0 mega">
             <dt class="milli">Mean radius</dt>
-            <dd class="mega push-none"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
+            <dd class="push-none"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
             <dt class="milli">Mass</dt>
-            <dd class="mega push-none"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
+            <dd class="push-none"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
             <dt class="milli">Surface gravity</dt>
-            <dd class="mega push-none"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
+            <dd class="push-none"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
             <dt class="milli">Axial tilt</dt>
-            <dd class="mega push-none"><data value="177.36">177.36°</data></dd>
+            <dd class="push-none"><data value="177.36">177.36°</data></dd>
           </dl>
         </div>
 
         <div class="details">
-          <h2 class="giga">Orbital Characteristics</h2>
-          <dl>
+          <h2 class="mega">Orbital Characteristics</h2>
+          <dl class="mega push-none">
             <dt class="milli">Aphelion</dt>
-            <dd class="mega push-none"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
+            <dd class=" push-none"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
             <dt class="milli push-none">Perihelion</dt>
-            <dd class="mega push-none"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
+            <dd class="push-none"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
             <dt class="milli">Orbital period</dt>
-            <dd class="mega push-none"><data value="224.701">224.701&nbsp;d</data></dd>
+            <dd class="push-none"><data value="224.701">224.701&nbsp;d</data></dd>
             <dt class="milli">Average orbital speed</dt>
-            <dd class="mega push-none"><data value="35.02">35.02&nbsp;km/s</data></dd>
+            <dd class="push-none"><data value="35.02">35.02&nbsp;km/s</data></dd>
           </dl>
         </div>
       </div>
